--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,21 +11,12 @@
     "experimentalDecorators": true,
     "allowJs": true,
     "target": "ES2022",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2017",
-      "es2016",
-      "es2015",
-      "es2018",
-      "dom"
-    ],
-    "useDefineForClassFields": false
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2017", "es2016", "es2015", "es2018", "dom"],
+    "useDefineForClassFields": false,
+    "allowSyntheticDefaultImports": true
   },
-  "exclude": [
-    "node_modules"
-  ],
+  "exclude": ["node_modules"],
   "angularCompilerOptions": {
     "strictTemplates": true,
     "fullTemplateTypeCheck": true,
