--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "angular-electron",
-  "version": "13.0.0",
-  "description": "Angular 16 with Electron 25 (Typescript + SASS + Hot Reload)",
-  "homepage": "https://github.com/maximegris/angular-electron",
+  "name": "lethalize-manager",
+  "version": "0.0.1",
+  "description": "A modloader application for Lethal Company. Written in Electron and Angular.",
+  "homepage": "https://github.com/fearganni/LethalizeManager",
   "author": {
-    "name": "Maxime GRIS",
-    "email": "maxime.gris@gmail.com"
+    "name": "fearganni",
+    "email": "gannicus@orbitus.ca"
   },
   "keywords": [
     "angular",
@@ -45,6 +45,7 @@
     "lint": "ng lint"
   },
   "dependencies": {
+    "@angular/animations": "16.1.3",
     "@angular/common": "16.1.3",
     "@angular/compiler": "16.1.3",
     "@angular/core": "16.1.3",
@@ -53,31 +54,47 @@
     "@angular/platform-browser": "16.1.3",
     "@angular/platform-browser-dynamic": "16.1.3",
     "@angular/router": "16.1.3",
+    "@fortawesome/fontawesome-free": "6.5.1",
+    "@ng-bootstrap/ng-bootstrap": "15.1.2",
+    "@ngx-loading-bar/core": "6.0.2",
+    "bootstrap": "5.3.2",
+    "discord-rpc": "4.0.1",
+    "electron-updater": "6.1.7",
+    "headroom.js": "0.12.0",
+    "jarallax": "2.1.4",
+    "marked": "4.3.0",
+    "moment": "2.29.4",
+    "ngx-markdown": "16.0.0",
+    "ngx-moment": "6.0.2",
+    "ngx-toastr": "18.0.0",
     "rxjs": "7.8.1",
+    "swiper": "11.0.5",
     "tslib": "^2.5.0",
     "zone.js": "~0.13.1"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "16.0.0",
-    "@angular-devkit/build-angular": "16.1.3",
-    "@angular-eslint/builder": "16.0.3",
+    "@angular-devkit/build-angular": "16.2.10",
+    "@angular-eslint/builder": "16.3.1",
     "@angular-eslint/eslint-plugin": "16.0.3",
     "@angular-eslint/eslint-plugin-template": "16.0.3",
-    "@angular-eslint/schematics": "16.0.3",
+    "@angular-eslint/schematics": "16.3.1",
     "@angular-eslint/template-parser": "16.0.3",
     "@angular/cli": "16.1.3",
     "@angular/compiler-cli": "16.1.3",
     "@ngx-translate/core": "15.0.0",
     "@ngx-translate/http-loader": "8.0.0",
     "@playwright/test": "1.35.1",
+    "@types/discord-rpc": "4.0.8",
+    "@types/headroom.js": "0.12.4",
     "@types/jasmine": "4.3.1",
     "@types/jasminewd2": "2.0.10",
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "5.60.1",
     "@typescript-eslint/parser": "5.60.1",
     "conventional-changelog-cli": "3.0.0",
-    "electron": "25.2.0",
-    "electron-builder": "24.4.0",
+    "electron": "25.9.8",
+    "electron-builder": "24.9.1",
     "electron-debug": "3.2.0",
     "electron-reloader": "1.2.3",
     "eslint": "8.43.0",
@@ -96,7 +113,7 @@
     "playwright": "1.35.1",
     "ts-node": "10.9.1",
     "typescript": "~4.9.5",
-    "wait-on": "7.0.1",
+    "wait-on": "7.2.0",
     "webdriver-manager": "12.1.9"
   },
   "engines": {
@@ -104,5 +121,27 @@
   },
   "browserslist": [
     "chrome 114"
-  ]
+  ],
+  "build": {
+    "files": [
+      "build/**/*"
+    ],
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "fearganni",
+        "repo": "LethalizeManager",
+        "channel": "latest"
+      }
+    ],
+    "appId": "orbitus.ca.lethalize",
+    "productName": "Lethalize Manager",
+    "directories": {
+      "output": "release/"
+    },
+    "win": {
+      "target": "msi",
+      "icon": "src/favicon.ico"
+    }
+  }
 }
