--- a/package.json
+++ b/package.json
@@ -7,22 +7,14 @@
     "name": "fearganni",
     "email": "gannicus@orbitus.ca"
   },
-  "keywords": [
-    "angular",
-    "angular 16",
-    "electron",
-    "electron 25",
-    "nodejs",
-    "typescript",
-    "playwright",
-    "eslint",
-    "sass",
-    "windows",
-    "mac",
-    "linux"
-  ],
+  "keywords": [],
   "main": "app/main.js",
   "private": true,
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
+  },
   "scripts": {
     "postinstall": "electron-builder install-app-deps",
     "ng": "ng",
@@ -54,8 +46,10 @@
     "@angular/platform-browser": "16.1.3",
     "@angular/platform-browser-dynamic": "16.1.3",
     "@angular/router": "16.1.3",
+    "@electron/remote": "2.1.1",
     "@fortawesome/fontawesome-free": "6.5.1",
     "@ng-bootstrap/ng-bootstrap": "15.1.2",
+    "@ng-select/ng-select": "11.2.0",
     "@ngx-loading-bar/core": "6.0.2",
     "bootstrap": "5.3.2",
     "discord-rpc": "4.0.1",
