--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -48,8 +48,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - name: Install Dependencies
-      run: npm i
+    - name: Install Dependencies (Force)
+      run: npm i --force
 
     - name: Check lint
       run: npm run lint
