--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -50,8 +50,8 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev librsvg2-dev patchelf
 
-    - name: Install Dependencies
-      run: npm i
+    - name: Install Dependencies (Force)
+      run: npm i --force
 
     - name: Check lint
       run: npm run lint
