--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -48,8 +48,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - name: Install Dependencies
-      run: npm i && npm i -D cli-truncate iconv-corefoundation
+    - name: Install Dependencies (Force)
+      run: npm i --force && npm i -D cli-truncate iconv-corefoundation --force
 
     - name: Check lint
       run: npm run lint
