--- a/tsconfig.serve.json
+++ b/tsconfig.serve.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "outDir": "app/build/",
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
@@ -7,21 +8,9 @@
     "experimentalDecorators": true,
     "module": "commonjs",
     "target": "es2015",
-    "types": [
-      "node"
-    ],
-    "lib": [
-      "es2017",
-      "es2016",
-      "es2015",
-      "dom"
-    ]
+    "types": ["node"],
+    "lib": ["es2017", "es2016", "es2015", "dom"]
   },
-  "files": [
-    "app/main.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "**/*.spec.ts"
-  ]
+  "files": ["app/src/Lethalize.ts"],
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
