--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@ng-bootstrap/ng-bootstrap": "15.1.2",
     "@ng-select/ng-select": "11.2.0",
     "@ngx-loading-bar/core": "6.0.2",
+    "axios": "1.6.2",
     "bootstrap": "5.3.2",
     "discord-rpc": "4.0.1",
     "electron-updater": "6.1.7",
