Inline style by default

--- a/angular.json
+++ b/angular.json
@@ -15,6 +15,7 @@
           "strict": true
         },
         "@schematics/angular:component": {
+          "inlineStyle": true,
           "style": "scss"
         }
       },
